Expose files unsecurely
